<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="user"
            type="com.example.laboratori4.Model"
            />
    </data>
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainFragment">


    <Button
        android:id="@+id/encuesta"
        android:layout_width="116dp"
        android:layout_height="51dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="150dp"
        android:text="@string/encuesta"
        android:onClick="onClick"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.452"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/foto_encuesta" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="99dp"
        android:layout_height="63dp"
        android:layout_marginStart="200dp"
        android:layout_marginTop="500dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="43dp"
        android:contentDescription="@string/add_pregunta"
        android:onClick="createQuestion"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.678"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.848"
        app:srcCompat="@android:drawable/btn_plus" />

    <ImageView
        android:id="@+id/foto_encuesta"
        android:layout_width="386dp"
        android:layout_height="266dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="90dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        android:contentDescription="@string/image_encuesta"
        app:layout_constraintBottom_toTopOf="@+id/encuesta"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.266"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.215"
        app:srcCompat="@drawable/encuesta" />


</androidx.constraintlayout.widget.ConstraintLayout>
</layout>